# agentscope

./: # AgentScope — Master Build Prompt.md  .gitignore  FRONTEND_COMPLETION_PROMPT.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  PRODUCT_ROADMAP.md  README.md  SDK_CREATION_PROMPT.md  index.html  package.json
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9c66e0ea42df_initial_migration.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  api_key.py  breakpoint.py  mcp_log.py  mcp_tool.py  project.py  run.py  run_step.py  test.py  test_run.py  user.py
backend/app/routers/: __init__.py  api_keys.py  auth.py  breakpoints.py  ingest.py  mcp.py  projects.py  runs.py  tests.py  users.py
backend/app/schemas/: __init__.py  api_key.py  breakpoint.py  common.py  mcp.py  run.py  (+5 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
sdk/python/: LICENSE  README.md  SDK_IMPLEMENTATION_SUMMARY.md  pyproject.toml
sdk/python/agentscope_sdk/: __init__.py  client.py  errors.py  tracker.py  types.py
sdk/python/examples/: basic_usage.py  context_manager.py  langchain_example.py
sdk/python/tests/: __init__.py  test_client.py  test_tracker.py
server/: alembic.ini  database.py  models.py
server/migrations/: env.py
src/: App.tsx  index.css
src/components/: Dashboard.tsx  EmptyState.tsx  MCPInspector.tsx  RunDetail.tsx  RunsList.tsx  Settings.tsx  Sidebar.tsx  TestDetail.tsx  TestsList.tsx
(+17 files in other folders)
