[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscope-sdk"
version = "0.1.0"
description = "Official Python SDK for AgentScope - AI Agent Debugging Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AgentScope Team"}
]
keywords = ["ai", "agents", "debugging", "testing", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
async = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agentscope"
Documentation = "https://docs.agentscope.dev"
Repository = "https://github.com/yourusername/agentscope"
Issues = "https://github.com/yourusername/agentscope/issues"
